@@ -8,6 +8,7 @@ apt (0.9.8~exp1) UNRELEASED; urgency=low
   * lp:~mvo/apt/webserver-simulate-broken-with-fix346386:
     - fix invalid InRelease file download checking and add regression
       test to server broken files to the buildin test webserver
+  * stop exporting the accidently exported parsenetrc() symbol
 
  -- David Kalnischkies <kalnischkies@gmail.com>  Mon, 09 Jul 2012 17:36:40 +0200
 
